# sunfounder-voice-assistant

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
docs/: requirements.txt
docs/source/: conf.py  index.rst  modules.rst  sunfounder_voice_assistant.audio_player.rst  sunfounder_voice_assistant.keyboard_input.rst  sunfounder_voice_assistant.llm.llm.rst  sunfounder_voice_assistant.rst  sunfounder_voice_assistant.stt.rst  sunfounder_voice_assistant.stt.vosk.rst  sunfounder_voice_assistant.tts.base.rst  sunfounder_voice_assistant.tts.espeak.rst  sunfounder_voice_assistant.tts.pico2wave.rst  sunfounder_voice_assistant.tts.piper.rst  sunfounder_voice_assistant.tts.piper_models.rst  sunfounder_voice_assistant.tts.rst  sunfounder_voice_assistant.utils.rst  sunfounder_voice_assistant.version.rst
examples/: llm_deepseek.py  llm_doubao.py  llm_doubao_with_image.py  llm_gemini.py  llm_grok.py  llm_ollama.py  llm_ollama_with_image.py  llm_openai.py  llm_openai_with_image.py  llm_others.py  llm_qwen.py  local_voice_chatbot.py  openclaw_voice.py  stt_vosk_list_models.py  stt_vosk_stream.py  stt_vosk_wake_word.py  stt_vosk_wake_word_thread.py  stt_vosk_without_stream.py  tts_edge.py  tts_espeak.py  tts_openai.py  tts_pico2wave.py  tts_piper.py  tts_piper_list_models.py  voice_assistant.py
sunfounder_voice_assistant/: __init__.py  _audio_player.py  _base.py  _logger.py  _version.py  audio_player.py  keyboard_input.py  utils.py  voice_assistant.py
sunfounder_voice_assistant/llm/: __init__.py  llm.py
sunfounder_voice_assistant/stt/: __init__.py  (+2 more)
test/: piper_speed.py
(+19 files in other folders)
